packages/runtime/src/core/__fixtures__/errors/runtime/main.js
const obj = null;
obj.property; // Will throw
